--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,5 +17,5 @@
 
   <link rel="stylesheet" href="{{ "/assets/css/style.css" | prepend: site.baseurl }}">
 
-  <title>{{ page.title | escape }} &#9670; {{ site.title | escape }} &#9670; W3C</title>
+  <title>{{ page.title | escape }} | {{ site.title | escape }} | Web Accessibility Initiative (WAI) | W3C</title>
 </head>
