--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
 <section class="default-grid info" tabindex="0">
-  <p class="inner"><svg aria-hidden="true" class="icon-info "><use xlink:href="{{ "/assets/images/icons.svg#icon-info" | prepend: site.baseurl }}"></use></svg>This is an unpublished draft preview. Please refer to our published website at <a href="https://www.w3.org/WAI/">w3.org/WAI/</a>.
+  <p class="inner"><svg aria-hidden="true" class="icon-info "><use xlink:href="{{ "/assets/images/icons.svg#icon-info" | prepend: site.github.url }}"></use></svg>This is an unpublished draft preview. Please refer to our published website at <a href="https://www.w3.org/WAI/">w3.org/WAI/</a>.
   </p>
 </section>
 
  <nav aria-label="Skip Link and Accessibility Options" id="controls" class="default-grid">
   <ul>
-    <li><a href="#main"><svg aria-hidden="true" class="icon-chevron-down "><use xlink:href="{{ "/assets/images/icons.svg#icon-chevron-down" | prepend: site.baseurl }}"></use></svg> Skip to Content</a></li>
+    <li><a href="#main"><svg aria-hidden="true" class="icon-chevron-down "><use xlink:href="{{ "/assets/images/icons.svg#icon-chevron-down" | prepend: site.github.url }}"></use></svg> Skip to Content</a></li>
     <li><a href="#">Change Text Size or Colors</a></li>
   </ul>
 </nav>
