Sidenav and footer template improvements

--- a/_includes/sidenav.html
+++ b/_includes/sidenav.html
@@ -17,9 +17,9 @@ The first section creates an array of page urls that are page urls of this colle
   <ul class="sidenav--list">
     {% assign my_pages = site.documents | sort: "order" %}
     {% for my_page in my_pages %}
-      {% if pgs contains my_page.url %}
+      {% unless my_page.nosidenav %}{% if pgs contains my_page.url %}
       <li><a class="page-link" {% if my_page.url == page.url %} aria-current="page" {% endif %} href="{{ my_page.url | prepend: site.github.url }}">{% if my_page.nav_title %}{{ my_page.nav_title }}{% else %}{{ my_page.title }}{% endif %}</a></li>
-      {% endif %}
+      {% endif %}{% endunless %}
     {% endfor %}
   </ul>
 </nav>
