--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,9 @@
-<footer class="page-footer default-grid">
+{% assign col = site.collections | where: "label", page.collection | first %}<footer class="page-footer default-grid">
   <div class="inner">
-    <p>Status: xxxxx</p>
-    <p>Editors: xxxxxx</p>
+    <p>
+      <strong>Updated:</strong> {{page.date | date: "%-d %B %Y"}}<br>
+      <strong>{{page.people.editorslabel}}:</strong> {% for p in page.people.editors%}<a href="{{p.url}}">{{p.name}}</a>{% if forloop.last %}.{% else %}, {% endif %}{% endfor %} <strong>Developed by the <a href="https://www.w3.org/WAI/EO/">Education and Outreach Working Group (EOWG)</a></strong>{% if page.support %} with support from {% for s in page.support%}<a href="{{s.url}}">{{s.name}}</a>{% if forloop.last %}.{% else %}, {% endif %}{% endfor %}{% endif %} {% if col.acknowledgements %}{% assign ackurl = page.collection | append: "/acknowledgements/" | prepend: site.github.url %}<a href="/{{ackurl}}">Acknowledgements</a>.{% endif %}
+    </p>
   </div>
 </footer>
 
