--- a/_layouts/sidenav.html
+++ b/_layouts/sidenav.html
@@ -6,6 +6,8 @@
 
 <main id="main" class="default-grid with-gap leftcol">
 
+  {% include sidenav.html %}
+
   <article>
     <h1>{{ page.title }}</h1>
     {{ content }}
