--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,4 +18,5 @@
   <link rel="stylesheet" href="{{ "/assets/css/style.css" | prepend: site.github.url }}">
 
   <title>{{ page.title | escape }} | {{ site.title | escape }} | W3C</title>
+  {% seo title=false %}
 </head>
