--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,6 @@
-{% assign col = site.collections | where: "label", page.collection | first %}<footer class="page-footer default-grid">
+{% assign col = site.collections | where: "label", page.collection | first %}
+{% unless page.nopagefooter %}
+<footer class="page-footer default-grid">
   <div class="inner">
     <p>
       <strong>Updated:</strong> {{page.date | date: "%-d %B %Y"}}<br>
@@ -6,12 +8,13 @@
     </p>
   </div>
 </footer>
+{% endunless %}
 
 <footer class="site-footer grid-4q">
   <div class="q1-start q2-end">
     <p><a class="largelink" href="https://w3.org/WAI/">Web Accessibility Initiative</a></p>
     <p>Strategies, guidelines, resources to make the web accessible to people with disabilities</p>
-    <p>Copyright © 2016 W3C® (MIT, ERCIM, Keio, Beihang). Usage policies apply.</p>
+    <p>Copyright © 2017 W3C® (MIT, ERCIM, Keio, Beihang). Usage policies apply.</p>
   </div>
   <div class="q3-start q3-end">
     <div class="footer-list-header">
@@ -24,10 +27,10 @@
   </div>
   <div class="q4-start q4-end">
     <ul>
-      <li><a href="#">Contact WAI</a></li>
-      <li><a href="#">Site Index</a></li>
-      <li><a href="#">Help with the WAI Website</a></li>
-      <li><a href="#">Privacy Statements</a></li>
+      <li><a href="{{ site.github.url }}/wai/contact/">Contact WAI</a></li>
+      <li><a href="{{ site.github.url }}/sitemap/">Site Index</a></li>
+      <li><a href="{{ site.github.url }}/wai/get-involved/">Help with the WAI Website</a></li>
+      <li><a href="{{ site.github.url }}/privacy/">Privacy Statements</a></li>
     </ul>
   </div>
 </footer>
