--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,25 +1,25 @@
 <section class="default-grid info" tabindex="0">
-  <p class="inner"><svg aria-hidden="true" class="icon-info "><use xlink:href="{{ "/assets/images/icons.svg#icon-info" | prepend: site.github.url }}"></use></svg>This is an unpublished draft preview. Please refer to our published website at <a href="https://www.w3.org/WAI/">w3.org/WAI/</a>.
+  <p class="inner">{% include icon.html name="info" %} This is an unpublished draft preview. Please refer to our published website at <a href="https://www.w3.org/WAI/">w3.org/WAI/</a>.
   </p>
 </section>
 
  <nav aria-label="Skip Link and Accessibility Options" id="controls" class="default-grid">
   <ul>
-    <li><a href="#main"><svg aria-hidden="true" class="icon-chevron-down "><use xlink:href="{{ "/assets/images/icons.svg#icon-chevron-down" | prepend: site.github.url }}"></use></svg> Skip to Content</a></li>
+    <li><a href="#main">{% include icon.html name="chevron-down" %} Skip to Content</a></li>
     <li><a href="#">Change Text Size or Colors</a></li>
   </ul>
 </nav>
 <header id="site-header" class="default-grid with-gap">
-  <div class="logos">
+  <a class="logos">
     <img src="{{ "/assets/images/w3c.svg" | prepend: site.github.url }}" alt="W3C">
     <span class="wai"><span class="wa">Web Accessibility</span> <span class="i">Initiative</span></span>
-  </div>
+  </a>
 
   <div class="navigations">
   <nav class="metanav" label="Meta &amp; Search">
     <ul>
-      <li><a href="#">About W3C WAI</a></li>
-      <li><a href="#">Get Involved</a></li>
+      <li><a href="{{ site.github.url }}/wai/about/">About W3C WAI</a></li>
+      <li><a href="{{ site.github.url }}/wai/get-involved/">Get Involved</a></li>
       <li>
         <form action="#" role="search">
           <div>
@@ -27,7 +27,7 @@
               <span class="l">Search:</span>
               <input id="header-search" type="search" results="10" autosave="waisearches" placeholder="e.g. Tutorials">
             </label>
-            <button class="button button-icon button-nobg button-noborder"><span><svg aria-hidden="true" class="icon-search "><use xlink:href="{{ "/assets/images/icons.svg#icon-search" | prepend: site.github.url }}"></use></svg></span></button>
+            <button class="button button-icon button-nobg button-noborder"><span>{% include icon.html name="search" %}</span></button>
           </div>
         </form>
       </li>
