--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
   </ul>
 </nav>
 <header id="site-header" class="default-grid with-gap">
-  <a class="logos">
+  <a class="logos" href="{{ site.github.url }}">
     <img src="{{ "/assets/images/w3c.svg" | prepend: site.github.url }}" alt="W3C">
     <span class="wai"><span class="wa">Web Accessibility</span> <span class="i">Initiative</span></span>
   </a>
