Don’t show prev/next box if there is no order in the page head

--- a/_includes/prevnext.html
+++ b/_includes/prevnext.html
@@ -1,3 +1,4 @@
+{% if page.order %}
 {% assign col = site.collections | where: "label", page.collection | first %}
 {% if page.group %}
   {% assign docs = col.docs | where: "group", page.group %}
@@ -30,3 +31,4 @@
   </ul>
   {% endif %}{% endfor %}
 </nav>
+{% endif %}
