--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
   </ul>
 </nav>
 <header id="site-header" class="default-grid with-gap">
-  <a class="logos" href="{{ site.github.url }}">
+  <a class="logos" href="{{ site.github.url }}/">
     <img src="{{ "/assets/images/w3c.svg" | prepend: site.github.url }}" alt="W3C">
     <span class="wai"><span class="wa">Web Accessibility</span> <span class="i">Initiative</span></span>
   </a>
@@ -19,6 +19,7 @@
   <nav class="metanav" label="Meta &amp; Search">
     <ul>
       <li><a href="{{ site.github.url }}/wai/about/">About W3C WAI</a></li>
+      <li><a href="{{ site.github.url }}/news/">News</a></li>
       <li><a href="{{ site.github.url }}/wai/get-involved/">Get Involved</a></li>
       <li>
         <form action="#" role="search">
@@ -40,9 +41,10 @@
 
 </header>
 
+{% unless page.url == "/" %}
 <nav class="breadcrumb default-grid" label="Breadcrumb">
   <ul class="default-container">
-    <li><a href="{{ site.baseurl }}/">Home</a></li>
+    <li><a href="{{ site.github.url }}/">Home</a></li>
     {% capture page_url_without_index_html %}{{ page.url | remove: "/index.html" }}{% endcapture %}
     {% assign splitted_url_parts = page_url_without_index_html | split: '/' %}
     {% capture forLoopMaxInt %}{{ splitted_url_parts.size | minus:1 }}{% endcapture %}
@@ -60,3 +62,4 @@
     {% endfor %}
   </ul>
 </nav>
+{% endunless %}
