--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -4,14 +4,14 @@
   <body>
     {% include header.html %}
 
-<main id="main" class="default-grid with-gap{% unless page.noleftcol %}leftcol{% endunless %}">
-
-  <article>
-    <h1>{{ page.title }}</h1>
+<main id="main">
+  <div class="grid-five-three">
+    <div class="col12">
+      <h1>{{ page.title }}</h1>
+    </div>
+  </div>
     {{ content }}
     {% include prevnext.html %}
-  </article>
-
 </main>
 
 {% include footer.html %}
