Add back to top button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     {{ content }}
     {% include prevnext.html %}
   </article>
-
+  <a class="button button-backtotop" href="#main"><span>{% include icon.html name="arrow-up" %} Back to Top</span></a>
 </main>
 
 {% include footer.html %}
