--- a/_layouts/policy.html
+++ b/_layouts/policy.html
@@ -53,6 +53,7 @@
     </div>
     {% include prevnext.html %}
   </article>
+  <a class="button button-backtotop" href="#main"><span>{% include icon.html name="arrow-up" %} Back to Top</span></a>
 
 </main>
 
