--- a/_layouts/sidenav.html
+++ b/_layouts/sidenav.html
@@ -13,7 +13,7 @@
     {{ content }}
     {% include prevnext.html %}
   </article>
-
+  <a class="button button-backtotop" href="#main"><span>{% include icon.html name="arrow-up" %} Back to Top</span></a>
 </main>
 
 {% include footer.html %}
