--- a/_includes/prevnext.html
+++ b/_includes/prevnext.html
@@ -8,7 +8,7 @@
 <nav class="pager" aria-label="Previous/Next Page">
   <ul>
     {% for p in docs %}{% assign tminus = page.order | minus: 1 %}{% if p.order == tminus %}
-    <li class="pager--item">
+    <li class="pager--item previous">
       <a href="{{p.url | prepend: site.github.url }}">
         {% include icon.html name="arrow-left" class="pager--item-icon" %}
         <span class="pager--item-text">
@@ -19,7 +19,7 @@
     </li>
     {% endif %}{% endfor %}
     {% for p in docs %}{% assign tplus = page.order | plus: 1 %}{% if p.order == tplus %}
-    <li class="pager--item">
+    <li class="pager--item next">
       <a href="{{p.url | prepend: site.github.url }}">
         {% include icon.html name="arrow-right" class="pager--item-icon" %}
         <span class="pager--item-text">
