--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -1,7 +1,7 @@
 {% if include.type == 'start' %}
 {% assign classes = include.class | split: " " %}
-<nav class="box{% for class in classes %} box-{{ class }}{% endfor %}" aria-labelledby="tocheading" id="toc">
-  <header id="tocheading" class="box-h {% for class in classes %} box-h-{{ class }}{% endfor %}{% if input.icon %} box-h-icon{% endif %}">{% if input.icon %} {% include icon.html name=input.icon %}{% endif %} {{ include.title}}</header>
+<nav class="box box-simple{% for class in classes %} box-{{ class }}{% endfor %}" aria-labelledby="tocheading" id="toc">
+  <header id="tocheading" class="box-h box-h-simple{% for class in classes %} box-h-{{ class }}{% endfor %}{% if input.icon %} box-h-icon{% endif %}">{% if input.icon %} {% include icon.html name=input.icon %}{% endif %} {{ include.title}}</header>
   <div class="box-i">
 {% endif %}
 {% if  include.type == 'end' %}
