--- a/_includes/navlist.html
+++ b/_includes/navlist.html
@@ -1,7 +1,12 @@
 <ul{% if include.depth==2 %} class="subnav"{% endif %}{% if include.depth==3 %} class="subsubnav"{% endif %}>
 {% for item in include.data %}
+  {% if include.depth == 1 %}
+    {% assign the_url = item.name | slugify | prepend: "/sitemap/#" %}
+  {% else %}
+    {% assign the_url = item.url %}
+  {% endif %}
   <li{% if item.pages %} class="has-submenu"{% endif %}>
-    <a href="{{ site.github.url }}{{item.url}}"><span>{{item.name}}{% if item.pages and include.depth > 1 %} {% include icon.html name="chevron-right" %}{% endif %}</span></a>
+    <a{% if include.id %} id="{{item.name | slugify}}"{% endif %} href="{{ site.github.url }}{{the_url}}"><span>{{item.name}}{% if item.pages and include.depth > 1 %} {% include icon.html name="chevron-right" %}{% endif %}</span></a>
     {% if item.pages %}{% assign newdepth = include.depth | plus: "1"%}{% include navlist.html data=item.pages depth=newdepth %}{% endif %}
   </li>
 {% endfor %}
