Fix skiplinks issue in some browsers

--- a/_layouts/policy.html
+++ b/_layouts/policy.html
@@ -4,7 +4,7 @@
   <body>
     {% include header.html %}
 
-<main id="main" class="default-grid with-gap leftcol">
+<main id="main" class="default-grid with-gap leftcol" tabindex="-1">
 
   {% include sidenav.html %}
 
