--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   <body>
     {% include header.html %}
 
-<main id="main" class="default-grid with-gap{% unless page.noleftcol %} leftcol{% endunless %}">
+<main id="main" class="default-grid with-gap{% unless page.noleftcol %} leftcol{% endunless %}" tabindex="-1">
 
   <article>
     <h1>{{ page.title }}</h1>
