--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -4,7 +4,7 @@
   <body>
     {% include header.html %}
 
-<main id="main">
+<main id="main" tabindex="-1">
   <div class="grid-five-three">
     <div class="col12">
       <h1>{{ page.title }}</h1>
