--- a/_layouts/sidenav.html
+++ b/_layouts/sidenav.html
@@ -4,7 +4,7 @@
   <body>
     {% include header.html %}
 
-<main id="main" class="default-grid with-gap leftcol">
+<main id="main" class="default-grid with-gap leftcol" tabindex="-1">
 
   {% include sidenav.html %}
 
