--- a/_layouts/policy.html
+++ b/_layouts/policy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns#">
   {% include head.html %}
-  <body>
+  <body id="top">
     {% include header.html %}
 
 <main id="main" class="default-grid with-gap leftcol" tabindex="-1">
@@ -53,7 +53,7 @@
     </div>
     {% include prevnext.html %}
   </article>
-  <a class="button button-backtotop" href="#main"><span>{% include icon.html name="arrow-up" %} Back to Top</span></a>
+  <a class="button button-backtotop" href="#top"><span>{% include icon.html name="arrow-up" %} Back to Top</span></a>
 
 </main>
 
