--- a/_includes/navlist.html
+++ b/_includes/navlist.html
@@ -2,11 +2,13 @@
 {% for item in include.data %}
   {% if include.depth == 1 %}
     {% assign the_url = item.name | slugify | prepend: "/sitemap/#" %}
+    {% assign the_name = item.name | replace_first: " &", "&nbsp;&amp;<br>" %}
   {% else %}
     {% assign the_url = item.url %}
+    {% assign the_name = item.name %}
   {% endif %}
   <li{% if item.pages %} class="has-submenu"{% endif %}>
-    <a{% if include.id %} id="{{item.name | slugify}}"{% endif %} href="{{ site.github.url }}{{the_url}}"><span>{{item.name}}{% if item.pages and include.depth > 1 %} {% include icon.html name="chevron-right" %}{% endif %}</span></a>
+    <a{% if include.id %} id="{{item.name | slugify}}"{% endif %} href="{{ site.github.url }}{{the_url}}"><span>{{the_name}}{% if item.pages and include.depth > 1 %} {% include icon.html name="chevron-right" %}{% endif %}</span></a>
     {% if item.pages %}{% assign newdepth = include.depth | plus: "1"%}{% include navlist.html data=item.pages depth=newdepth %}{% endif %}
   </li>
 {% endfor %}
