Add Caching for quicker build times

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,6 +35,6 @@
   </div>
 </footer>
 <section class="default-grid info" tabindex="0">
-  <p class="inner">{% include icon.html name="info" %} This is an unpublished draft preview. Please refer to our published website at <a href="https://www.w3.org/WAI/">w3.org/WAI/</a>.
+  <p class="inner">{% include_cached icon.html name="info" %} This is an unpublished draft preview. Please refer to our published website at <a href="https://www.w3.org/WAI/">w3.org/WAI/</a>.
   </p>
 </section>
