--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <nav aria-label="Skip Link and Accessibility Options" id="controls" class="default-grid">
   <ul>
-    <li><a href="#main">{% include icon.html name="chevron-down" %} Skip to Content</a></li>
+    <li><a href="#main">{% include_cached icon.html name="chevron-down" %} Skip to Content</a></li>
     <li><a href="#">Change Text Size or Colors</a></li>
   </ul>
 </nav>
@@ -23,7 +23,7 @@
               <span class="l">Search:</span>
               <input id="header-search" type="search" name="q" placeholder="e.g. Tutorials">
             </label>
-            <button class="button button-icon button-nobg button-noborder"><span>{% include icon.html name="search" %}</span></button>
+            <button class="button button-icon button-nobg button-noborder"><span>{% include_cached icon.html name="search" %}</span></button>
           </div>
         </form>
       </li>
