--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -12,7 +12,7 @@
   </div>
     {{ content }}
     {% include prevnext.html %}
-    <a class="button button-backtotop" href="#top"><span>{% include icon.html name="arrow-up" %} Back to Top</span></a>
+    <a class="button button-backtotop" href="#top"><span>{% include_cached icon.html name="arrow-up" %} Back to Top</span></a>
 </main>
 
 {% include footer.html %}
