--- a/_includes/prevnext.html
+++ b/_includes/prevnext.html
@@ -10,7 +10,7 @@
     {% for p in docs %}{% assign tminus = page.order | minus: 1 %}{% if p.order == tminus %}
     <li class="pager--item previous">
       <a href="{{p.url | prepend: site.github.url }}">
-        {% include icon.html name="arrow-left" class="pager--item-icon" %}
+        {% include_cached icon.html name="arrow-left" class="pager--item-icon" %}
         <span class="pager--item-text">
           <span class="pager--item-text-direction">Previous:</span>
           <span class="pager--item-text-target">{{p.title}}</span>
@@ -21,7 +21,7 @@
     {% for p in docs %}{% assign tplus = page.order | plus: 1 %}{% if p.order == tplus %}
     <li class="pager--item next">
       <a href="{{p.url | prepend: site.github.url }}">
-        {% include icon.html name="arrow-right" class="pager--item-icon" %}
+        {% include_cached icon.html name="arrow-right" class="pager--item-icon" %}
         <span class="pager--item-text">
           <span class="pager--item-text-direction">Next:</span>
           <span class="pager--item-text-target">{{p.title}}</span>
