--- a/_includes/sidenav.html
+++ b/_includes/sidenav.html
@@ -3,7 +3,7 @@ The first section creates an array of page urls that are page urls of this colle
 {% endcomment %}
 {% assign col = site.collections | where: "label", page.collection | first %}
 <nav class="sidenav sn-contents" aria-label="Other Pages in this Resource">
-  <div class="sidenav--head"><div class="sidenav--head-icon">{% if col.icon %}{% include icon.html name=col.icon class="sidenav--head-icon--inner" %}{% endif %}</div><div class="sidenav--head-title"><div class="sidenav--head-subsection">{% if col.shortname %}{{ col.shortname }}{% else %}{{ col.name }}{% endif %}</div>
+  <div class="sidenav--head"><div class="sidenav--head-icon">{% if col.icon %}{% include_cached icon.html name=col.icon class="sidenav--head-icon--inner" %}{% endif %}</div><div class="sidenav--head-title"><div class="sidenav--head-subsection">{% if col.shortname %}{{ col.shortname }}{% else %}{{ col.name }}{% endif %}</div>
     </div>
   </div>
   <ul class="sidenav--list">
@@ -22,7 +22,7 @@ The first section creates an array of page urls that are page urls of this colle
   {% assign my_pages = site.documents | sort: "order" %}
   {% for my_page in my_pages %}
     {% unless my_page.nosidenav %}{% if pgs contains my_page.url %}
-    <li><a class="page-link" {% if my_page.url == page.url %} aria-current="page" {% endif %} href="{{ my_page.url | prepend: site.github.url }}">{% if my_page.url == page.url %}{% include icon.html name="chevron-right" %} {% endif %}{% if my_page.nav_title %}{{ my_page.nav_title }}{% else %}{{ my_page.title }}{% endif %}</a></li>
+    <li><a class="page-link" {% if my_page.url == page.url %} aria-current="page" {% endif %} href="{{ my_page.url | prepend: site.github.url }}">{% if my_page.url == page.url %}{% include_cached icon.html name="chevron-right" %} {% endif %}{% if my_page.nav_title %}{{ my_page.nav_title }}{% else %}{{ my_page.title }}{% endif %}</a></li>
     {% endif %}{% endunless %}
   {% endfor %}
 {% else %}
@@ -45,7 +45,7 @@ The first section creates an array of page urls that are page urls of this colle
       {% assign my_pages = site.documents | sort: "order" %}
       {% for my_page in my_pages %}
         {% unless my_page.nosidenav %}{% if pgs contains my_page.url %}
-        <li><a class="page-link" {% if my_page.url == page.url %} aria-current="page" {% endif %} href="{{ my_page.url | prepend: site.github.url }}">{% if my_page.url == page.url %}{% include icon.html name="chevron-right" %} {% endif %}{% if my_page.nav_title %}{{ my_page.nav_title }}{% else %}{{ my_page.title }}{% endif %}</a></li>
+        <li><a class="page-link" {% if my_page.url == page.url %} aria-current="page" {% endif %} href="{{ my_page.url | prepend: site.github.url }}">{% if my_page.url == page.url %}{% include_cached icon.html name="chevron-right" %} {% endif %}{% if my_page.nav_title %}{{ my_page.nav_title }}{% else %}{{ my_page.title }}{% endif %}</a></li>
         {% endif %}{% endunless %}
       {% endfor %}
 
