--- a/_layouts/policy.html
+++ b/_layouts/policy.html
@@ -53,7 +53,7 @@
     </div>
     {% include prevnext.html %}
   </article>
-  <a class="button button-backtotop" href="#top"><span>{% include icon.html name="arrow-up" %} Back to Top</span></a>
+  <a class="button button-backtotop" href="#top"><span>{% include_cached icon.html name="arrow-up" %} Back to Top</span></a>
 
 </main>
 
