--- a/_includes/img.html
+++ b/_includes/img.html
@@ -14,4 +14,4 @@
     {% endunless%}
   {% endfor %}
 {% endif %}
-<img src="{{url}}{{include.src}}"{% if include.srcset %} srcset="{{out}}"{% endif %} alt="{{include.alt}}"{% if input.class %} class="{% for class in input.class %} {{ class }}{% endfor %}"{% endif %}>
+<img src="{{url}}{{include.src}}"{% if include.srcset %} srcset="{{out}}"{% endif %} alt="{{include.alt}}"{% if include.class %} class="{% assign classes = include.class | split: " " %}{% for class in classes %} {{ class }}{% endfor %}"{% endif %}>
