--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,12 @@
   <article>
     <h1>{{ page.title }}</h1>
     {{ content }}
+
+    {{page.wcag_success_criteria}}{{page.wcag_techniques}}
+    {% if page.wcag_success_criteria or page.wcag_techniques %}
+      {% include resources.html %}
+    {% endif %}
+
     {% include prevnext.html %}
   </article>
   <a class="button button-backtotop" href="#top"><span>{% include_cached icon.html name="arrow-up" %} Back to Top</span></a>
