--- a/_layouts/sidenav.html
+++ b/_layouts/sidenav.html
@@ -11,6 +11,11 @@
   <article>
     <h1>{{ page.title }}</h1>
     {{ content }}
+
+    {% if page.wcag_success_criteria or page.wcag_techniques %}
+      {% include resources.html %}
+    {% endif %}
+
     {% include prevnext.html %}
   </article>
   <a class="button button-backtotop" href="#top"><span>{% include_cached icon.html name="arrow-up" %} Back to Top</span></a>
