--- a/_includes/multilang-list.html
+++ b/_includes/multilang-list.html
@@ -16,12 +16,15 @@
   {% if thislangurl %}
     <a href="{{thislangurl}}" hreflang="{{lng}}">
   {% endif %}
+  {% unless lng == "en" %}
+    <span lang="en">{{site.data.lang[lng].name}}: </span>
+  {% endunless %}
   {{t[1]}}
   {% unless lng == "en" %}
-    [<span lang="en">{{site.data.lang[lng].name}}</span>/<span lang="{{lng}}">{{site.data.lang[lng].nativeName}}</span>]
+    (<span lang="{{lng}}">{{site.data.lang[lng].nativeName}}</span>)
   {% endunless %}
   {% if thislangurl %}
-    {% if include.external %} <img src='//www.w3.org/Icons/tr.png' lang="en" alt='External'>{% endif %} </a>
+    {% if include.external %}&nbsp;{% include_cached icon.html name="external-link" label="External Site" %}{% endif %} </a>
   {% endif %}
   {% unless forloop.first %}</li>{% endunless %}
   {% if forloop.first %}{% if include.wrap %}</{{include.wrap}}>{% endif %}{% endif %}
