--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns#">
   {% include head.html %}
-  <body>
+  <body id="top" class="{% include body-class.html %}">
 
 {% include header.html %}
 <main id="main" tabindex="-1">
