--- a/_layouts/sidenav.html
+++ b/_layouts/sidenav.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns#">
   {% include head.html %}
-  <body id="top">
+  <body id="top" class="{% include body-class.html %}">
     {% include header.html %}
 
 <main id="main" class="default-grid with-gap leftcol" tabindex="-1">
