--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,7 @@
   </script>
 
   <link rel="stylesheet" href="{{ "/assets/css/style.css" | prepend: site.github.url }}">
+  {% if page.ext_css %}<link rel="stylesheet" href="{{ page.ext_css | prepend: '/css/' | prepend: page.collection | prepend: '/' | prepend: site.github.url }}">{% endif %}
 
   <title>{{ page.title | escape }} | {{ site.title | escape }} | W3C</title>
   {% seo title=false %}
