--- a/_includes/box.html
+++ b/_includes/box.html
@@ -1,7 +1,7 @@
 {% if include.type == 'start' %}
 {% assign classes = include.class | split: " " %}
-<aside class="box{% for class in classes %} box-{{ class }}{% endfor %}">
-  <header class="box-h {% for class in classes %} box-h-{{ class }}{% endfor %}{% if include.icon %} box-h-icon{% endif %}">{% if include.icon %} {% include_cached icon.html name=include.icon %}{% endif %} {{ include.title}}</header>
+<aside class="box{% for class in classes %} box-{{ class }}{% endfor %}"{% if include.id %} id="{{include.id}}"{% endif %}>
+  <header class="box-h {% for class in classes %} box-h-{{ class }}{% endfor %}{% if include.icon %} box-h-icon{% endif %}">{% if include.icon %} {% include_cached icon.html name=include.icon %}{% endif %}{% if include.h %} <h{{include.h}}>{% endif %} {{ include.title}}{% if include.h %} </h{{include.h}}>{% endif %}</header>
   <div class="box-i">
 {% endif %}
 {% if  include.type == 'end' %}
