--- a/_layouts/policy.html
+++ b/_layouts/policy.html
@@ -17,15 +17,18 @@
       {% for p in page.policies %}
         {% assign theslug = p.title.en | slugify %}
         {% capture boxtitle %}
-        {% include multilang-list.html title=p.title url=p.url external="true" wrap="h2" id=theslug class="policy-heading" %}
+        {% include multilang-policy-title.html title=p.title url=p.url external="true" wrap="h2" id=theslug class="policy-heading" %}
         {% endcapture %}
         {% include box.html type="start" title=boxtitle class="large" %}
-        <div>
+        <div>{% assign urlsize = p.url | size %}
+          <h3 style="margin-top:10px;">Official law/policy page{% if urlsize > 1 %}s{% endif %}</h3>
+          {% include multilang-list-policy-links.html title=p.title url=p.url external="true" wrap="h2" id=theslug class="policy-heading" %}
+          <h3>Details</h3>
           <ul>
             <li>Date enacted: {{p.enactdate}}</li>
             <li>Responsible {%if p.ministries.size == 1%}Entity (Agency, Ministry, etc.){%else%}Entities (Agencies, Ministries, etc.){%endif%}:
               <ul>
-                {% for m in p.ministries %}<li>{% include multilang-list.html title=m.title url=m.url external="true" wrap="strong" %}</li>{% endfor %}
+                {% for m in p.ministries %}<li>{% include multilang-list.html title=m.title url=m.url external="true" %}</li>{% endfor %}
               </ul>
             </li>
             <li>Type: {{p.type}}</li>
@@ -37,7 +40,7 @@
             {% if p.standard %}
               <li>Relevant Standard{%if p.standard.size > 1 %}s{%endif%}:
                 <ul>
-                  {% for d in p.standard %}<li>{% include multilang-list.html title=d.title url=d.url external="true" wrap="strong" %}{%if d.desc %}<br>{{d.desc}}{%endif%}</li>{%endfor%}
+                  {% for d in p.standard %}<li>{% include multilang-list.html title=d.title url=d.url external="true" %}{%if d.desc %}<br>{{d.desc}}{%endif%}</li>{%endfor%}
                 </ul>
               </li>
             {% endif %}
@@ -46,7 +49,7 @@
             {% if p.documents %}
               <li>Relevant Documents:
                 <ul>
-                  {% for d in p.documents %}<li>{% include multilang-list.html title=d.title url=d.url external="true" wrap="strong" %}{%if d.desc %}<br>{{d.desc}}{%endif%}</li>{%endfor%}
+                  {% for d in p.documents %}<li>{% include multilang-list.html title=d.title url=d.url external="true" %}{%if d.desc %}<br>{{d.desc}}{%endif%}</li>{%endfor%}
                 </ul>
               </li>
             {% endif %}
