--- a/_layouts/policy.html
+++ b/_layouts/policy.html
@@ -17,9 +17,11 @@
       {% for p in page.policies %}
         {% assign theslug = p.title.en | slugify %}
         {% capture boxtitle %}
-        {% include multilang-policy-title.html title=p.title url=p.url external="true" wrap="h2" id=theslug class="policy-heading" %}
+        <h2 class="policy-heading">
+          {% include multilang-policy-title.html title=p.title %}
+        </h2>
         {% endcapture %}
-        {% include box.html type="start" title=boxtitle class="large" %}
+        {% include box.html type="start" title=boxtitle class="large" id=theslug %}
         <div>{% assign urlsize = p.url | size %}
           <h3 style="margin-top:10px;">Official law/policy page{% if urlsize > 1 %}s{% endif %}</h3>
           {% include multilang-list-policy-links.html title=p.title url=p.url external="true" wrap="h2" id=theslug class="policy-heading" %}
